clusters/sirius/apps/jellyfin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-ingress
  namespace: jellyfin
  annotations:
    cert-manager.io/cluster-issuer: default-clusterissuer
spec:
  tls:
  - hosts:
    - jellyfin.sirius.moonblade.work
    secretName: jellyfin-cert
  rules:
  - host: jellyfin.sirius.moonblade.work
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jellyfin
            port:
              name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-outer
  annotations:
    external-dns.alpha.kubernetes.io/hostname: ""
  labels:
    external-dns-exclude: "true"
spec:
  rules:
  - host: jellyfin.moonblade.work
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jellyfin
            port:
              name: http
